--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,7 @@ main{
     background-color:rgb(40,116,240);
     width:50%;
     align-self: center;
+    color:white;
 }
 .best_of_section{
     height:600px;
